Added styling changes

--- a/pages/module_3.html
+++ b/pages/module_3.html
@@ -21,7 +21,7 @@
             <div class="row g-0">
 
                 <!-- mobile sidemenu content start -->
-                <nav class="d-block d-xl-none navbar sidemenu">
+                <nav class="d-block d-xl-none navbar fixed-top sidemenu">
                     <div class="container-fluid">
                         <span>
                             &nbsp;
@@ -194,8 +194,8 @@
                             <div class="row">
                                 <div class="col-9">
                                     <p class="card-text">FLASK – фреймворк, который используется для создания веб-приложений на языке Питон.
-                                        На данном этапе происходит синтез всех приобретенных знаний (Питон, HTML and CSS). 
-                                        Студенты научаться создавать простые веб-сайты по правилам фреймворка FLASK. 
+                                        На данном этапе происходит синтез всех приобретенных знаний (Питон, HTML и CSS). 
+                                        Студенты научатся создавать простые веб-сайты по правилам фреймворка FLASK. 
                                         В качестве бонуса, студенты также познакомятся с созданием ботов, в частности мы напишем программу 
                                         для осуществления web-scraping. 
                                         В модуль входит: презентация теоретического материала (слайды на каждом занятии), 
@@ -210,9 +210,7 @@
                             </div>
 
                             <br>
-                            <h3>Продолжительность модуля - 30 занятий. </h3>
-                            <br>
-                            <h3>Модуль включает в себя следующие темы:</h3>
+                            <h4 style="margin-bottom: 15px">Модуль включает в себя следующие темы:</h4>
                             <ol>
                                 <li>FLASK Installation</li>
                                 <li>Command Line</li>
@@ -223,18 +221,8 @@
                                 <li>Web Scraping</li>
                             </ol>
                             <br>
-                            <h3>Пропуск занятий в данном модуле не приветствуется. </h3>
-                            <br>
-        
-                            <h2>Записаться на занятия</h2>
-                            <p class="card-text">Занятия проводятся два раза в неделю. Дни проведения занятий – с понедельника по пятницу. Время проведения занятий (московское):</p>
-                            <ul>
-                                <li>16:00 – 17:00 (пн-пт)</li>
-                                <li>17:00 – 18:00 (пн-пт)</li>
-                                <li>18:00 – 19:00 (пн-пт)</li>
-                                <li>19:00 – 20:00 (пн-пт)</li>
-                                <li>20:00 – 21:00 (пн-пт)</li>
-                            </ul>                      
+                            <h5 style="margin-bottom: 15px">Продолжительность модуля - 30 занятий. </h5>
+                            <h5>Пропуск занятий в данном модуле не приветствуется. </h5>                     
         
                             <br>
                             <br>   
