--- a/pages/module_4.html
+++ b/pages/module_4.html
@@ -21,7 +21,7 @@
             <div class="row g-0">
 
                 <!-- mobile sidemenu content start -->
-                <nav class="d-block d-xl-none navbar sidemenu">
+                <nav class="d-block d-xl-none navbar fixed-top sidemenu">
                     <div class="container-fluid">
                         <span>
                             &nbsp;
@@ -216,26 +216,15 @@
 
 
                             <br>
-                            <h3>Продолжительность модуля - 8 занятий</h3>
-                            <br>
-                            <h3>Модуль включает в себя работу 
+                            <h4>Модуль включает в себя работу 
                             над созданием веб-сайта с использованием основных команд Git: clone, init, 
-                            add, commit, push, log, diff, status, checkout, reset.</h3>
+                            add, commit, push, log, diff, status, checkout, reset.</h4>
                             <br>
-                            <h3>*Пропуск занятий в данном модуле не приветствуется.</h3>
+                            <h5 style="margin-bottom: 15px">Продолжительность модуля - 8 занятий</h5>
+                            <h5>Пропуск занятий в данном модуле не приветствуется.</h5>
                             <br>
         
-                            <h2>Записаться на занятия</h2>
-                            <p class="card-text">Занятия проводятся два раза в неделю. Дни проведения занятий – с понедельника по пятницу. Время проведения занятий (московское):</p>
-                            <ul>
-                                <li>16:00 – 17:00 (пн-пт)</li>
-                                <li>17:00 – 18:00 (пн-пт)</li>
-                                <li>18:00 – 19:00 (пн-пт)</li>
-                                <li>19:00 – 20:00 (пн-пт)</li>
-                                <li>20:00 – 21:00 (пн-пт)</li>
-                            </ul>                      
-        
-                            <br>
+
                             <br>
                             <a href="/pages/signup.html?course=module_4"><button class="btn btn-primary">Цена модуля и условия оплаты</button></a>                               
                         </div>
