--- a/pages/module_5.html
+++ b/pages/module_5.html
@@ -21,7 +21,7 @@
             <div class="row g-0">
 
                 <!-- mobile sidemenu content start -->
-                <nav class="d-block d-xl-none navbar sidemenu">
+                <nav class="d-block d-xl-none navbar fixed-top sidemenu">
                     <div class="container-fluid">
                         <span>
                             &nbsp;
@@ -195,12 +195,28 @@
 
                             <div class="row">
                                 <div class="col-12">
-                                    <p>Описание модуля появится в ближайшее время.</p>
+                                    <p class="card-text"> SQL - язык программирования, предназначенный для описания, изменения и извлечения данных, хранимых в реляционных базах данных.
+                                        SQL позволяет выполнять следующий набор операций: 
+                                        - создание в базе данных новой таблицы;
+                                        - добавление в таблицу новых записей;
+                                        - изменение записей;
+                                        - удаление записей;
+                                        - выборка записей из одной или нескольких таблиц (в соответствии с заданным условием);
+                                        - изменение структур таблиц;
+                                        - описание и управление новыми хранимыми объектами.
+                                    </p>
+                                    <br>
+                                    <h4>Модуль включает в себя работу над уже существующей базой данных, а также создание собственной базы данных с использованием основных команд: CREATE TABLE, INSERT INTO, SELECT, ALTER TABLE, UPDATE, DELETE FROM.</h4>
+                                    <br>
+                                    <h5 style="margin-bottom: 15px">Продолжительность модуля - 10 занятий</h5>
+                                    <h5>Пропуск занятий в данном модуле не приветствуется.</h5>
+                                    <br>
                                 </div>
-                            
+
+
+                                <br>
+                                <a href="/pages/signup.html?course=module_5"><button class="btn btn-primary">Цена модуля и условия оплаты</button></a>
                             </div>
-
-
                         </div>
                     </div>
 
