--- a/pages/module_2.html
+++ b/pages/module_2.html
@@ -8,6 +8,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Besley:wght@600&display=swap" rel="stylesheet"> 
         <title>Coding Prep School</title>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
         <script> 
             $(document).ready(function(){
