Mobile related styling changes

--- a/pages/module_1.html
+++ b/pages/module_1.html
@@ -173,14 +173,14 @@
 
                     <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
                         <div class="carousel-inner">
-                            <div class="carousel-item active">
-                                <img height="250" class="d-block w-100 img-darken05" src="/static/module1_1-crop.png" alt="First slide">
+                            <div class="carousel-item carousel-item250 active">
+                                <img class="d-block w-100 img-darken05" src="/static/module1_1-crop.png" alt="First slide">
                             </div>
-                            <div class="carousel-item">
-                                <img height="250" class="d-block w-100 img-darken05" src="/static/module1_2-crop.png" alt="Second slide">
+                            <div class="carousel-item carousel-item250">
+                                <img class="d-block w-100 img-darken05" src="/static/module1_2-crop.png" alt="Second slide">
                             </div>
-                            <div class="carousel-item">
-                                <img height="250" class="d-block w-100 img-darken05" src="/static/module1_3-crop.png" alt="Third slide">
+                            <div class="carousel-item carousel-item250">
+                                <img class="d-block w-100 img-darken05" src="/static/module1_3-crop.png" alt="Third slide">
                             </div>
                             <div class="centervh">
                                 <h2 class="text-light carousel-text-line1">Модуль I</h2>
