--- a/pages/module_3.html
+++ b/pages/module_3.html
@@ -173,18 +173,19 @@
 
                     <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
                         <div class="carousel-inner">
-                            <div class="carousel-item active">
-                                <img height="250" class="d-block w-100 img-darken05" src="/static/module3_1-crop.png" alt="First slide">
+                            <div class="carousel-item carousel-item250 active">
+                                <img class="d-block w-100 img-darken05" src="/static/module3_1-crop.png" alt="First slide">
                             </div>
-                            <div class="carousel-item">
-                                <img height="250" class="d-block w-100 img-darken05" src="/static/module3_2-crop.png" alt="Second slide">
+                            <div class="carousel-item carousel-item250">
+                                <img class="d-block w-100 img-darken05" src="/static/module3_2-crop.png" alt="Second slide">
                             </div>
-                            <div class="carousel-item">
-                                <img height="250" class="d-block w-100 img-darken05" src="/static/module3_3-crop.png" alt="Third slide">
+                            <div class="carousel-item carousel-item250">
+                                <img class="d-block w-100 img-darken05" src="/static/module3_3-crop.png" alt="Third slide">
                             </div>
                             <div class="centervh">
                                 <h2 class="text-light carousel-text-line1">Модуль III</h2>
-                                <h1 class="text-light carousel-text-line2">Основы FLASK. Создание Веб-Приложений</h1>
+                                <h1 class="text-light carousel-text-line2">Основы FLASK.</h1> 
+                                <h1 class="text-light carousel-text-line2">Создание Веб-Приложений</h1>
                             </div>
                         </div>
                     </div>
