--- a/pages/signup.html
+++ b/pages/signup.html
@@ -186,13 +186,13 @@
                     <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
                         <div class="carousel-inner">
                             <div class="carousel-item active">
-                                <img height="500" class="d-block w-100 img-darken07" src="/static/kid_coding-crop.png" alt="First slide">
+                                <img class="d-block w-100 img-darken07" src="/static/kid_coding-crop.png" alt="First slide">
                             </div>
                             <div class="carousel-item">
-                                <img height="500" class="d-block w-100 img-darken08" src="/static/kid_eating_coding-crop.png" alt="Second slide">
+                                <img class="d-block w-100 img-darken08" src="/static/kid_eating_coding-crop.png" alt="Second slide">
                             </div>
                             <div class="carousel-item">
-                                <img height="500" class="d-block w-100 img-darken05" src="/static/kid_typing-crop.png" alt="Third slide">
+                                <img class="d-block w-100 img-darken05" src="/static/kid_typing-crop.png" alt="Third slide">
                             </div>
                             <h1 class="text-light display-1 centervh">Набор Открыт!</h1> 
                         </div> 
