Fixed mobile styling issues

--- a/index.html
+++ b/index.html
@@ -100,6 +100,8 @@
     
                     </div>
                 </div>
+                <div style="margin-bottom:54px">
+                </div>
                 <!-- mobile sidemenu content end -->
                 
                 <!-- sidemenu content start -->
@@ -207,7 +209,9 @@
                                 если компьютерная система студента дает сбои и требуется проверка программного обеспечения.</p>
                             <br>
                             <h5>Посмотреть пробное занятие можно здесь:</h5>
-                            <iframe width="560" height="315" src="https://www.youtube.com/embed/WB3URxiVCjc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                            <div class="video-container">
+                                <iframe src="https://www.youtube.com/embed/WB3URxiVCjc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                            </div>
                             <br>
                             <br>
                             <div class="row">
