--- a/pages/module_3.html
+++ b/pages/module_3.html
@@ -100,6 +100,8 @@
     
                     </div>
                 </div>
+                <div style="margin-bottom:54px">
+                </div>
                 <!-- mobile sidemenu content end -->
                 
                 <!-- sidemenu content start -->
@@ -194,7 +196,12 @@
                         <div class="card-body card-body-style">
 
                             <div class="row">
-                                <div class="col-9">
+                                <div class="col-xl-3">
+                                    <div class="text-center">
+                                        <img style="padding-right:30px;" src="/static/Flask_(web_framework)-Logo.wine.svg" width="220px" /><br><img style="padding-bottom:30px;" src="/static/python-logo-2.png" width="80px" />
+                                    </div>
+                                </div>
+                                <div class="col-xl-9">
                                     <p class="card-text">FLASK – фреймворк, который используется для создания веб-приложений на языке Питон.
                                         На данном этапе происходит синтез всех приобретенных знаний (Питон, HTML и CSS). 
                                         Студенты научатся создавать простые веб-сайты по правилам фреймворка FLASK. 
@@ -203,11 +210,6 @@
                                         В модуль входит: презентация теоретического материала (слайды на каждом занятии), 
                                         решение практических задач, которые подобраны с учетом интересов студентов, а также оценка знаний студентов (проектные работы).
                                     </p>                                
-                                </div>
-                                <div class="col-3">
-                                    <div class="text-center">
-                                        <img src="/static/Flask_(web_framework)-Logo.wine.svg" width="220px" /><br><img src="/static/python-logo-2.png" width="80px" />
-                                    </div>
                                 </div>
                             </div>
 
