--- a/pages/module_4.html
+++ b/pages/module_4.html
@@ -100,6 +100,8 @@
     
                     </div>
                 </div>
+                <div style="margin-bottom:54px">
+                </div>
                 <!-- mobile sidemenu content end -->
                 
                 <!-- sidemenu content start -->
@@ -195,22 +197,22 @@
                         <div class="card-body card-body-style">
 
                             <div class="row">
-                                <div class="col-8">
+                                <div class="col-xl-2">
+                                    <div class="text-center">
+                                        <i style="color: green;" class="fab fa-git fa-6x"></i>
+                                    </div>
+                                </div>
+                                <div class="col-xl-2">
+                                    <div style="padding-bottom:30px;" class="text-center">
+                                        <i style="color: #666666;" class="fab fa-github-square fa-6x"></i><br>Github
+                                    </div>
+                                </div>
+                                <div class="col-xl-8">
                                     <p class="card-text">Git  - бесплатное программное обеспечение, которое позволяет программистам 
                                         отслеживать изменения в проекте и работать совместно над одним проектом.  
                                         Github позволяет программистам сохранить окончательный вариант проекта и 
                                         создать профессиональное портфолио.
                                     </p>                                
-                                </div>
-                                <div class="col-2">
-                                    <div class="text-center">
-                                        <i style="color: green;" class="fab fa-git fa-6x"></i>
-                                    </div>
-                                </div>
-                                <div class="col-2">
-                                    <div class="text-center">
-                                        <i style="color: #666666" class="fab fa-github-square fa-6x"></i><br>Github
-                                    </div>
                                 </div>
                             </div>
 
