--- a/pages/module_6.html
+++ b/pages/module_6.html
@@ -100,6 +100,8 @@
     
                     </div>
                 </div>
+                <div style="margin-bottom:54px">
+                </div>
                 <!-- mobile sidemenu content end -->
                 
                 <!-- sidemenu content start -->
