--- a/pages/signup.html
+++ b/pages/signup.html
@@ -112,6 +112,8 @@
     
                     </div>
                 </div>
+                <div style="margin-bottom:54px">
+                </div>
                 <!-- mobile sidemenu content end -->
                 
                 <!-- sidemenu content start -->
