Fixed mobile styling issue

--- a/index.html
+++ b/index.html
@@ -215,10 +215,10 @@
                             <br>
                             <br>
                             <div class="row">
-                                <div class="col-1">
+                                <div class="col-md-1">
                                     <i class="fas fa-laptop-code fa-2x"></i>
                                 </div>
-                                <div class="col-11">
+                                <div class="col-md-11">
                                     <h5>Занятия проводятся в онлайн формате. Количество студентов в группе = 6 – 10 человек.</h5>
                                 </div>
                             </div>
@@ -226,10 +226,10 @@
                                 <div class="col-12">&nbsp;</div>
                             </div>
                             <div class="row">
-                                <div class="col-1">
+                                <div class="col-md-1">
                                     <i class="far fa-id-card fa-2x"></i>
                                 </div>
-                                <div class="col-11">
+                                <div class="col-md-11">
                                     <h5>Рекомендуемый возраст для начала занятий в нашей школе – 13 лет.</h5>
                                 </div>
                             </div>
