--- a/pages/signup.html
+++ b/pages/signup.html
@@ -112,7 +112,7 @@
     
                     </div>
                 </div>
-                <div style="margin-bottom:54px">
+                <div style="margin-bottom:54px" class="d-xl-none">
                 </div>
                 <!-- mobile sidemenu content end -->
                 
