--- a/index.html
+++ b/index.html
@@ -195,10 +195,10 @@
 
                             <p class="card-text">Программа нашей школы была разработана учителем Нью Йорка со степенью магистра
                             (MS in Education, Long Island University, Brooklyn, NY) и программистом (automation engineer manager) 
-                            из Нью Йорка (PACE University) с 20-летним стажем. Мы обучаем детей в США, Британии и Канаде, а теперь и в России. </p>
+                            из Нью Йорка (PACE University) с 20-летним стажем. Мы обучаем детей в США, Британии, Канаде, а теперь и в России. </p>
 
                             <p class="card-text">Мы создали программу, которая позволяет освоить основы профессионального программирования. 
-                            Наши занятия хорошо структурированы, интересны подросткам, позволяют закрепить изученный материал на практике. 
+                            Наши занятия хорошо структурированы, интересны подросткам, и позволяют закрепить изученный материал на практике. 
                             Наши студенты имеют возможность создать свое профессиональное портфолио.
                             По окончании каждого модуля студенты получают сертификат, в котором указаны темы изученного материала и 
                             выполненные ими проекты.</p>
