--- a/pages/module_3.html
+++ b/pages/module_3.html
@@ -205,7 +205,7 @@
                                     <p class="card-text">FLASK – фреймворк, который используется для создания веб-приложений на языке Питон.
                                         На данном этапе происходит синтез всех приобретенных знаний (Питон, HTML и CSS). 
                                         Студенты научатся создавать простые веб-сайты по правилам фреймворка FLASK. 
-                                        В качестве бонуса, студенты также познакомятся с созданием ботов, в частности мы напишем программу 
+                                        В качестве бонуса, студенты также познакомятся с созданием ботов, в частности, мы напишем программу 
                                         для осуществления web-scraping. 
                                         В модуль входит: презентация теоретического материала (слайды на каждом занятии), 
                                         решение практических задач, которые подобраны с учетом интересов студентов, а также оценка знаний студентов (проектные работы).
