--- a/pages/module_6.html
+++ b/pages/module_6.html
@@ -199,7 +199,28 @@
 
                             <div class="row">
                                 <div class="col-12">
-                                <p>Описание модуля появится в ближайшее время.</p>
+                                    <p>
+                                        На данном этапе студенты работают над созданием веб-приложений:
+                                    </p>
+                                    <ul>
+                                        <li>To do list</li>
+                                        <li>Notes App</li>
+                                        <li>Quiz app</li>
+                                        <li>API bot</li>
+                                        <li>Blog App</li>
+                                        <li>Portfolio Website</li>
+                                        <li>Currency Converter</li>
+                                        <li>Flashcards App</li>
+                                        <li>Password generator</li>
+                                        <li>Sales Receipt App</li>
+                                    </ul>  
+                                    <br>
+                                    <h5 style="margin-bottom: 15px">Продолжительность модуля - 30 занятий</h5>
+                                    <h5>Пропуск занятий в данном модуле не приветствуется.</h5>
+                                    <br>  
+                                    <br>
+                                    <br>
+                                    <a href="/pages/signup.html?course=module_6"><button class="btn btn-primary">Цена модуля и условия оплаты</button></a>
                                 </div>
                             </div>
 
