--- a/pages/module-5_pricing.html
+++ b/pages/module-5_pricing.html
@@ -5,7 +5,7 @@
 </ul>  
 <h4>Оплата производится</h4> 
 <ul>
-    <li>по PayPal PayPal: codingprepschool@gmail.com</li>
+    <li>по PayPal: codingprepschool@gmail.com</li>
 </ul>
 <p>или<p> 
 <ul>
