--- a/common/sidemenu_old.html
+++ b/common/sidemenu_old.html
@@ -32,7 +32,7 @@
                 <a href="/pages/module_3.html" class="nav-link link-dark">
                     <i class="fas fa-fw"></i>
                     <i class="fas fa-minus"></i>
-                    Модуль III. Основы FLASK <br />
+                    Модуль III. Основы Flask <br />
                     <i class="fas fa-fw"></i>
                     <i class="fas fa-fw"></i>
                     Создание Веб-Приложений
@@ -40,7 +40,7 @@
                 <a href="/pages/module_4.html" class="nav-link link-dark">
                     <i class="fas fa-fw"></i>
                     <i class="fas fa-minus"></i>
-                    Модуль IV. Основы Git. Github
+                    Модуль IV. Основы Git. Github.
                 </a>
                 <a href="/pages/module_5.html" class="nav-link link-dark">
                     <i class="fas fa-fw"></i>
@@ -73,7 +73,7 @@
             <a href="http://localhost:8000/pages/module_3.html" class="nav-link link-dark">
                 <i class="fas fa-fw"></i>
                 <i class="fas fa-minus"></i>
-                Модуль III. Основы FLASK <br />
+                Модуль III. Основы Flask <br />
                 <i class="fas fa-fw"></i>
                 <i class="fas fa-fw"></i>
                 Создание Веб-Приложений
@@ -81,7 +81,7 @@
             <a href="http://localhost:8000/pages/module_4.html" class="nav-link link-dark">
                 <i class="fas fa-fw"></i>
                 <i class="fas fa-minus"></i>
-                Модуль IV. Основы Git. Github
+                Модуль IV. Основы Git. Github.
             </a>
             <a href="http://localhost:8000/pages/module_5.html" class="nav-link link-dark">
                 <i class="fas fa-fw"></i>
