--- a/ru/pages/module-2_pricing.html
+++ b/ru/pages/module-2_pricing.html
@@ -1,4 +1,5 @@
-<h2>  Варианты оплаты данного модуля:</h2>
+<h2>Варианты оплаты данного модуля:</h2>
+<h5>Модуль II. HTML and CSS</h5>
 <ul>
     <li>Оплатить весь модуль – $250</li>
     <li>Оплатить ½ модуля - $150 до начала первого занятия и $100 после 6 занятия</li>
