--- a/ru/pages/module-7_pricing.html
+++ b/ru/pages/module-7_pricing.html
@@ -1,4 +1,5 @@
-<h2>  Варианты оплаты данного модуля:</h2>
+<h2>Варианты оплаты данного модуля:</h2>
+<h5>Модуль VII. Создание профессионального портфолио</h5>
 <ul>
     <li>Оплатить весь модуль – $600</li>
     <li>Оплатить ½ модуля - $300 до начала первого занятия и $300 после 15 занятия</li>
