--- a/ru/pages/module-1_pricing.html
+++ b/ru/pages/module-1_pricing.html
@@ -1,5 +1,5 @@
-<h2> Цена модуля и условия оплаты:</h2>
-    
+<h2>Цена модуля и условия оплаты:</h2>
+<h5>Модуль I. Основы Питона</h5>
 <p>Первоначально оплачивается 5 занятий = $100. Данного количества занятий достаточно, чтобы определить, 
 будет студент продолжать обучение или нет.</p>
 <p>После 5 занятий, если студент решил продолжать обучение, оплачивается остальная стоимость курса.</p>
