--- a/ru/pages/module-3_pricing.html
+++ b/ru/pages/module-3_pricing.html
@@ -1,4 +1,5 @@
-<h2>  Варианты оплаты данного модуля:</h2>
+<h2>Варианты оплаты данного модуля:</h2>
+<h5>Модуль III. Основы Flask - Создание Веб-Приложений</h5>
 <ul>
     <li>Оплатить весь модуль – $650</li>
     <li>Оплатить ½ модуля - $325 до начала первого занятия и $325 после 15 занятия</li>
