--- a/ru/pages/module-4_pricing.html
+++ b/ru/pages/module-4_pricing.html
@@ -1,4 +1,5 @@
-<h2>  Варианты оплаты данного модуля:</h2>
+<h2>Варианты оплаты данного модуля:</h2>
+<h5>Модуль IV. Основы Git. Github.</h5>
 <ul>
     <li>Оплатить весь модуль – $200</li>
     <li>Оплатить ½ модуля - $100 до начала первого занятия и $100 после 4 занятия</li>
