--- a/ru/pages/module-5_pricing.html
+++ b/ru/pages/module-5_pricing.html
@@ -1,4 +1,5 @@
-<h2>  Варианты оплаты данного модуля:</h2>
+<h2>Варианты оплаты данного модуля:</h2>
+<h5>Модуль V. SQL</h5>
 <ul>
     <li>Оплатить весь модуль – $240</li>
     <li>Оплатить ½ модуля - $120 до начала первого занятия и $120 после 5 занятия</li>
