--- a/en-US/pages/module_6.html
+++ b/en-US/pages/module_6.html
@@ -213,7 +213,7 @@
                                 <img class="d-block w-100 img-darken05" src="/static/module3_3-crop.png" alt="Third slide">
                             </div>
                             <div class="centervh">
-                                <h2 class="text-light carousel-text-line1">Level III</h2>
+                                <h2 class="text-light carousel-text-line1">Level VI</h2>
                                 <h1 class="text-light display-1 carousel-text-line2">Flask</h1>
                                 <h1 class="text-light carousel-text-line2">Creating Web Applications</h1>
                             </div>
