--- a/en-US/index.html
+++ b/en-US/index.html
@@ -211,7 +211,7 @@
                             <div class="carousel-item">
                                 <img class="d-block w-100 img-darken07" src="/static/kid-sitting-bed-coding-crop.png" alt="Third slide">
                             </div>
-                            <h1 class="text-light display-1 centervh">Welcome to Coding Prep School</h1>
+                            <h1 class="text-light display-1 centervh">Coding Prep School</h1>
                         </div>
                     </div>
 
