In all modeules, added 7 and 8 modules, commented out course duration and payment link

--- a/en-US/pages/module_1.html
+++ b/en-US/pages/module_1.html
@@ -95,7 +95,12 @@
                                 <a href="/en-US/pages/module_7.html" class="nav-link link-dark">
                                     <i class="fas fa-fw"></i>
                                     <i class="fas fa-minus"></i>
-                                    Level VII. Developing a<br />
+                                    Level VII. Java Script.
+                                </a>
+                                <a href="/en-US/pages/module_8.html" class="nav-link link-dark">
+                                    <i class="fas fa-fw"></i>
+                                    <i class="fas fa-minus"></i>
+                                    Level VIII. Developing a<br />
                                     <i class="fas fa-fw"></i>
                                     <i class="fas fa-fw"></i>
                                     Professional Portfolio
@@ -181,7 +186,12 @@
                             <a href="/en-US/pages/module_7.html" class="nav-link link-dark">
                                 <i class="fas fa-fw"></i>
                                 <i class="fas fa-minus"></i>
-                                Level VII. Developing a<br />
+                                Level VII. Java Script.
+                            </a>
+                            <a href="/en-US/pages/module_8.html" class="nav-link link-dark">
+                                <i class="fas fa-fw"></i>
+                                <i class="fas fa-minus"></i>
+                                Level VIII. Developing a<br />
                                 <i class="fas fa-fw"></i>
                                 <i class="fas fa-fw"></i>
                                 Professional Portfolio
@@ -253,16 +263,16 @@
                                 <li>Classes</li>
                             </ol>
                             <br>
-                            <h5 style="margin-bottom: 15px">Course duration – 30 classes.</h5>
-                            <h5>Missed classes: </h5>
-                            <p class="card-text">Students are allowed to skip 20% of classes in this 
-                            course (6 classes). The student must inform the teacher about skipping the 
-                            class and the teacher will send a link to the video of the skipped lesson 
-                            (*It is not the recording of the class, but a pre-recorded video of the theoretical part of the lesson.)</p>
+                            <!-- <h5 style="margin-bottom: 15px">Course duration – 30 classes.</h5> -->
+                            <!-- <h5>Missed classes: </h5> -->
+                           <!-- <p class="card-text">Students are allowed to skip 20% of classes in this  -->
+                            <!-- course (6 classes). The student must inform the teacher about skipping the  -->
+                            <!-- class and the teacher will send a link to the video of the skipped lesson  -->
+                            <!-- (*It is not the recording of the class, but a pre-recorded video of the theoretical part of the lesson.)</p> -->
                             <br>
-                            <br>
+                            <br> 
                                 
-                            <a href="/en-US/pages/signup.html?course=module_1"><button class="btn btn-primary">Pricing information and Payment Options</button></a>
+                            <!-- <a href="/en-US/pages/signup.html?course=module_1"><button class="btn btn-primary">Pricing information and Payment Options</button></a> -->
                             
                             <!-- <a href="#" class="card-link">Card link</a> -->
                             <!-- <a href="#" class="card-link">Another link</a> -->
