--- a/en-US/pages/module_6.html
+++ b/en-US/pages/module_6.html
@@ -95,7 +95,12 @@
                                 <a href="/en-US/pages/module_7.html" class="nav-link link-dark">
                                     <i class="fas fa-fw"></i>
                                     <i class="fas fa-minus"></i>
-                                    Level VII. Developing a<br />
+                                    Level VII. Java Script.
+                                </a>
+                                <a href="/en-US/pages/module_8.html" class="nav-link link-dark">
+                                    <i class="fas fa-fw"></i>
+                                    <i class="fas fa-minus"></i>
+                                    Level VIII. Developing a<br />
                                     <i class="fas fa-fw"></i>
                                     <i class="fas fa-fw"></i>
                                     Professional Portfolio
@@ -181,7 +186,12 @@
                             <a href="/en-US/pages/module_7.html" class="nav-link link-dark">
                                 <i class="fas fa-fw"></i>
                                 <i class="fas fa-minus"></i>
-                                Level VII. Developing a<br />
+                                Level VII. Java Script.
+                            </a>
+                            <a href="/en-US/pages/module_8.html" class="nav-link link-dark">
+                                <i class="fas fa-fw"></i>
+                                <i class="fas fa-minus"></i>
+                                Level VIII. Developing a<br />
                                 <i class="fas fa-fw"></i>
                                 <i class="fas fa-fw"></i>
                                 Professional Portfolio
