--- a/en-US/pages/module_7.html
+++ b/en-US/pages/module_7.html
@@ -95,7 +95,12 @@
                                 <a href="/en-US/pages/module_7.html" class="nav-link link-dark">
                                     <i class="fas fa-fw"></i>
                                     <i class="fas fa-minus"></i>
-                                    Level VII. Developing a<br />
+                                    Level VII. Java Script.
+                                </a>
+                                <a href="/en-US/pages/module_8.html" class="nav-link link-dark">
+                                    <i class="fas fa-fw"></i>
+                                    <i class="fas fa-minus"></i>
+                                    Level VIII. Developing a<br />
                                     <i class="fas fa-fw"></i>
                                     <i class="fas fa-fw"></i>
                                     Professional Portfolio
@@ -181,7 +186,12 @@
                             <a href="/en-US/pages/module_7.html" class="nav-link link-dark">
                                 <i class="fas fa-fw"></i>
                                 <i class="fas fa-minus"></i>
-                                Level VII. Developing a<br />
+                                Level VII. Java Script.
+                            </a>
+                            <a href="/en-US/pages/module_8.html" class="nav-link link-dark">
+                                <i class="fas fa-fw"></i>
+                                <i class="fas fa-minus"></i>
+                                Level VIII. Developing a<br />
                                 <i class="fas fa-fw"></i>
                                 <i class="fas fa-fw"></i>
                                 Professional Portfolio
@@ -242,12 +252,12 @@
                                         <li>Sales Receipt App</li>
                                     </ul>  
                                     <br>
-                                    <h5 style="margin-bottom: 15px">Course duration – 25 classes.</h5>
-                                    <h5>We do not recommend skipping classes in this course.</h5>
+                                    <!-- <h5 style="margin-bottom: 15px">Course duration – 25 classes.</h5> -->
+                                    <!-- <h5>We do not recommend skipping classes in this course.</h5> -->
                                     <br>  
                                     <br>
                                     <br>
-                                    <a href="/en-US/pages/signup.html?course=module_7"><button class="btn btn-primary">Pricing Information and Payment Options</button></a>
+                                    <!-- <a href="/en-US/pages/signup.html?course=module_7"><button class="btn btn-primary">Pricing Information and Payment Options</button></a> -->
                                 </div>
                             </div>
 
