--- a/en-US/pages/module_2.html
+++ b/en-US/pages/module_2.html
@@ -95,7 +95,12 @@
                                 <a href="/en-US/pages/module_7.html" class="nav-link link-dark">
                                     <i class="fas fa-fw"></i>
                                     <i class="fas fa-minus"></i>
-                                    Level VII. Developing a<br />
+                                    Level VII. Java Script.
+                                </a>
+                                <a href="/en-US/pages/module_8.html" class="nav-link link-dark">
+                                    <i class="fas fa-fw"></i>
+                                    <i class="fas fa-minus"></i>
+                                    Level VIII. Developing a<br />
                                     <i class="fas fa-fw"></i>
                                     <i class="fas fa-fw"></i>
                                     Professional Portfolio
@@ -181,7 +186,12 @@
                             <a href="/en-US/pages/module_7.html" class="nav-link link-dark">
                                 <i class="fas fa-fw"></i>
                                 <i class="fas fa-minus"></i>
-                                Level VII. Developing a<br />
+                                Level VII. Java Script.
+                            </a>
+                            <a href="/en-US/pages/module_8.html" class="nav-link link-dark">
+                                <i class="fas fa-fw"></i>
+                                <i class="fas fa-minus"></i>
+                                Level VIII. Developing a<br />
                                 <i class="fas fa-fw"></i>
                                 <i class="fas fa-fw"></i>
                                 Professional Portfolio
@@ -253,15 +263,15 @@
                                 <li>CSS Box</li>
                             </ol>
                             <br>
-                            <h5 style="margin-bottom: 15px">Course duration – 12 classes. </h5>
+                            <!-- <h5 style="margin-bottom: 15px">Course duration – 12 classes. </h5>
                             <h5>Missed classes:</h5>
                             <p class="card-text">Students are allowed to skip 20% of classes in this course (3 classes). 
                             The student must inform the teacher about skipping the class and the teacher will send a link 
                             to the video of the skipped lesson (*It is not the recording of the class, but a pre-recorded 
-                            video of the theoretical part of the lesson.)</p>
+                            video of the theoretical part of the lesson.)</p> -->
                             <br>
                             <br>    
-                            <a href="/en-US/pages/signup.html?course=module_2"><button class="btn btn-primary">Pricing Information and Payment Options</button></a>                
+                            <!-- <a href="/en-US/pages/signup.html?course=module_2"><button class="btn btn-primary">Pricing Information and Payment Options</button></a>                 -->
                         </div>
                         </div>
 
